# Entitas-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
EntitasPP/: ComponentTypeId.hpp  Delegate.hpp  Entity.cpp  Entity.hpp  Group.cpp  Group.hpp  GroupObserver.cpp  GroupObserver.hpp  ISystem.hpp  Matcher.cpp  Matcher.hpp  Pool.cpp  Pool.hpp  ReactiveSystem.cpp
